--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@types/cookies": "^0.7.7",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "cookies": "^0.8.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "http-proxy": "^1.18.1",
