--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@/components/*": ["./components/*"],
       "@/models/*": ["./models/*"],
+      "@/api/*": ["./api-clients/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
